# raw-transactions-handler

./: .pre-commit-config.yaml  Makefile  README.md  main.py  pylock.toml  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml
scripts/: export_layer_requirements.py
src/handler/: __init__.py  handler.py  log_manager.py  log_type.py  logger.py  main.py  storage.py  transform.py  validator.py
tests/: test_handler.py  test_log_manager.py  test_storage.py  test_transform.py  test_validator.py
