[project]
name = "raw-transactions-handler"
version = "0.1.0"
description = "Used by an AWS Lambda function to run on raw creditcard transaction data to check for quality and transform to Parquet format."
readme = "README.md"
authors = [
    { name = "Manuel Djirlic" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.0",
    "boto3-stubs>=1.38.3",
    "polars>=1.27.1",
]
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
raw-transactions-handler = "handler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/handler"]
include = ["src/handler/py.typed"]

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
exclude = [".venv", ".mypy_cache", "pytest_cache", "*__pycache__"]

[tool.isort]
atomic = true
profile = "black"
line_length = 100
skip_gitignore = true

[tool.uv.workspace]
members = [
    "handler",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "flake8-pyproject>=1.2.3",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
]
