[project]
name = "raw-transactions-handler"
version = "0.1.0"
description = "Used by an AWS Lambda function to run on raw creditcard transaction data to check for quality and transform to Parquet format."
readme = "README.md"
authors = [
    { name = "Manuel Djirlic" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.0",
    "boto3-stubs>=1.38.3",
    "polars>=1.27.1",
]
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
raw-transactions-handler = "handler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/handler"]
include = ["src/handler/py.typed"]

[tool.ruff]
exclude = [
    ".git",
    ".gitignore",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
]
line-length = 100

[tool.uv.workspace]
members = [
    "handler",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.9",
]
